--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#services" class="nav-link">Services</a>
                 <a href="#training" class="nav-link">Training</a>
                 <a href="#community" class="nav-link">Community</a>
-                <a href="#blog" class="nav-link">Blog</a>
+                <a href="http://localhost:3001" class="nav-link" target="_blank">Blog</a>
                 <a href="#newsletter" class="nav-link">Newsletter</a>
                 <a href="#about" class="nav-link">About</a>
             </div>
